--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "firebase deploy": "firebase deploy --except functions"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node-sass": "^6.0.1"
+  }
 }
